<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/quiz"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_add_flashcard"
            android:icon="@drawable/flash"
            android:title="@string/menu_add_flashcard" />
        <item
            android:id="@+id/nav_score_history"
            android:icon="@drawable/history"
            android:title="@string/menu_score_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
