<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/light_gray"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/tvAboutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/primary_dark_color"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAboutContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/about_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/dark_gray"
        android:textAlignment="center"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvAboutTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/dark_gray"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
